# Endfield-Pull-Calculator

./: .coverage  .gitignore  FINAL_SUMMARY.md  Makefile  PROJECT_STRUCTURE.txt  README.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  MIGRATION.md
src/: __init__.py  cli.py  constants.py  counters.py
src/_legacy/: display.py  probability.py  state.py
src/application/: __init__.py
src/application/dto/: __init__.py
src/application/ports/: __init__.py  input_port.py  output_port.py  random_generator.py  state_repository.py
src/application/use_cases/: __init__.py  calculate_state.py  show_base_rates.py  show_probability_table.py  simulate_pull.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  pity_state.py  pull_result.py
src/domain/exceptions/: __init__.py
src/domain/services/: __init__.py  counter_calculator.py  pity_simulator.py  probability_calculator.py
src/domain/value_objects/: __init__.py  game_rules.py  pity_count.py  probability.py
src/infrastructure/cli/: console_input.py  menu.py
src/infrastructure/persistence/: json_repository.py  random_adapter.py
src/infrastructure/presentation/: console_presenter.py
tests/: conftest.py
tests/application/: test_calculate_state_use_case.py
tests/domain/: test_pity_state.py  test_probability.py  test_probability_calculator.py
tests/integration/: test_end_to_end.py
